# ElnaTech-holding

./: .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  environment.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  seed_operators.py
.github/workflows/: ci-cd.yml  ci.yml
app/: main.py
app/api/: academy.py  accounts.py  admin.py  auth.py  comply.py  credit.py  ecosystem.py  guide.py  insights.py  integrations.py  kyc.py  market.py  mobile_money.py  notifications.py  transactions.py  webhooks.py
app/core/: config.py  database.py
app/models/: extended.py  market.py  models.py
app/schemas/: schemas.py
app/services/: auth.py  fraud_detection.py
app/services/comply/: service.py
app/services/credit/: service.py
app/services/fraud/: advanced.py
app/services/guide/: visual_identity.py
app/services/insights/: service.py
app/services/kyc/: service.py
app/services/market/: service.py
app/static/: academy.html  admin.html  comply.html  credit.html  ecosystem.html  guide.html  index.html  insights.html  market.html
tests/: conftest.py  test_api.py  test_services.py
